// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the Story info and the list of associated comments 1`] = `
<div
  id="comments-container"
>
  <div
    id="story-info"
  >
    <a
      id="story-url"
    />
    <div>
      <p>
        by me 2 hours ago | 5 ☆
      </p>
    </div>
  </div>
  <div
    id="comments-list"
  >
    <div>
      <hr
        id="comments-hr"
      />
      <h4>
         Comments
      </h4>
    </div>
    <div
      className="comments-list"
      style={
        Object {
          "margin-left": "7px",
        }
      }
    >
      <div>
        <div
          className="comment"
        >
          <div
            className="comment-details"
          >
            <a
              href="/user/a"
            >
              <p>
                a
              </p>
            </a>
            <p
              className="comment-detaiil-child"
            >
               
              1 hour ago
            </p>
          </div>
          <div
            className="the-comment"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>A</p>",
              }
            }
          />
        </div>
        <div
          className="comments-list"
          style={
            Object {
              "margin-left": "6px",
            }
          }
        >
          <div>
            <div
              className="comment"
            >
              <div
                className="comment-details"
              >
                <a
                  href="/user/b"
                >
                  <p>
                    b
                  </p>
                </a>
                <p
                  className="comment-detaiil-child"
                >
                   
                  45 minutes ago
                </p>
              </div>
              <div
                className="the-comment"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p>B</p>",
                  }
                }
              />
            </div>
            <div
              className="comments-list"
              style={
                Object {
                  "margin-left": "7px",
                }
              }
            />
          </div>
          <div>
            <div
              className="comment"
            >
              <div
                className="comment-details"
              >
                <a
                  href="/user/c"
                >
                  <p>
                    c
                  </p>
                </a>
                <p
                  className="comment-detaiil-child"
                >
                   
                  30 minutes ago
                </p>
              </div>
              <div
                className="the-comment"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p>C</p>",
                  }
                }
              />
            </div>
            <div
              className="comments-list"
              style={
                Object {
                  "margin-left": "7px",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render the top level comment and indent the nested comments 1`] = `
<div>
  <div
    className="comment"
  >
    <div
      className="comment-details"
    >
      <a
        href="/user/me"
      >
        <p>
          me
        </p>
      </a>
      <p
        className="comment-detaiil-child"
      >
         
        2 hours ago
      </p>
    </div>
    <div
      className="the-comment"
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
    />
  </div>
  <div
    className="comments-list"
    style={
      Object {
        "margin-left": "7px",
      }
    }
  >
    <div>
      <div
        className="comment"
      >
        <div
          className="comment-details"
        >
          <a
            href="/user/a"
          >
            <p>
              a
            </p>
          </a>
          <p
            className="comment-detaiil-child"
          >
             
            1 hour ago
          </p>
        </div>
        <div
          className="the-comment"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>A</p>",
            }
          }
        />
      </div>
      <div
        className="comments-list"
        style={
          Object {
            "margin-left": "6px",
          }
        }
      >
        <div>
          <div
            className="comment"
          >
            <div
              className="comment-details"
            >
              <a
                href="/user/b"
              >
                <p>
                  b
                </p>
              </a>
              <p
                className="comment-detaiil-child"
              >
                 
                45 minutes ago
              </p>
            </div>
            <div
              className="the-comment"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p>B</p>",
                }
              }
            />
          </div>
          <div
            className="comments-list"
            style={
              Object {
                "margin-left": "7px",
              }
            }
          />
        </div>
        <div>
          <div
            className="comment"
          >
            <div
              className="comment-details"
            >
              <a
                href="/user/c"
              >
                <p>
                  c
                </p>
              </a>
              <p
                className="comment-detaiil-child"
              >
                 
                30 minutes ago
              </p>
            </div>
            <div
              className="the-comment"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p>C</p>",
                }
              }
            />
          </div>
          <div
            className="comments-list"
            style={
              Object {
                "margin-left": "7px",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
